--- a/markitstockEx/WebContent/index.html
+++ b/markitstockEx/WebContent/index.html
@@ -17,7 +17,7 @@
 
 </script>
 </head>
-<body style="margin-left:100px;margin-right:100px;margin-top:50px;" ng-app="markitstockEx">
+<body  ng-app="markitstockEx">
 <!-- Not sure why This has to be embedded in singlequotes and then double quotes. Wiered -->
 <!--  Check if the user exists in the rootScope -->
 <div ng-include='"/markitstockEx/app/views/template/header.html"' ng-show="$root.globals.currentUser.username"></div>
