--- a/onecloud/public/spa.html
+++ b/onecloud/public/spa.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app='oneClientApp'>
 <head>
   <meta charset="utf-8">
-  <title>Bootstrap 3, from LayoutIt!</title>
+  <title>One Cloud</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
@@ -26,12 +26,7 @@
   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/apple-touch-icon-72-precomposed.png">
   <link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon-57-precomposed.png">
   <link rel="shortcut icon" href="img/favicon.png">
-  <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular.min.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular-route.js"></script>
-	<script src="//code.angularjs.org/1.2.13/angular-cookies.js"></script>
-  <script src="js/app.js"></script>
-  <script src="js/controllers/controller.js"></script>
-  <script src="js/services/service.js"></script>
+
 </head>
 
 <body>
@@ -108,5 +103,11 @@
 		</div>
 	</div>
 </div>
+  <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular-route.js"></script>
+	<script src="//code.angularjs.org/1.2.13/angular-cookies.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/controllers/controller.js"></script>
+  <script src="js/services/service.js"></script>
 </body>
 </html>
