Change route for oAuth Support
drop box oAuth does not support # in the url so Angular JS does not
recgnize it as a route if it does not have #. Workaround is that, remove
the # in the URL let the request go to Express JS, redirect to url by
putting #.
ex:
http://localhost:8080/oneclient/dropbox is the redirect URL for oAuth.
when it url is redirected, it hits the express.js and that will return
http://8080/oneclient#/dropbox which is picjed by angular as a valid
URL.

--- a/onecloud/public/login.html
+++ b/onecloud/public/login.html
@@ -25,7 +25,7 @@
                         <h3 class="panel-title">Sign In</h3>
                     </div>
                     <div class="panel-body">
-                        <form role="form" action="/logon" method="post">
+                        <form role="form" action="/oneclient" method="post">
                             <fieldset>
                                 <div class="form-group">
                                    <input type="text" class="form-control" placeholder="UserName">
