--- a/rsvp-analytics/public/spa.html
+++ b/rsvp-analytics/public/spa.html
@@ -31,6 +31,8 @@
     <![endif]-->
  <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular-route.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.js"></script>
+	<script src="lib/tc-angular-chartjs.js"></script>
 	<script src="lib/jquery.js"></script>
 	<script src="lib/bootstrap.min.js"></script>
 	
